# Game-2

./: .gitignore  CMakeLists.txt  README.md  mingw-toolchain.cmake
include/glad/: gl.h
src/: Animation.cpp  Animation.h  Camera.h  CharacterModel.cpp  CharacterModel.h  Game.h  GameTypes.h  Game_Combat.cpp  Game_HUD.cpp  Game_Input.cpp  Game_Render.cpp  Game_Setup.cpp  Game_Update.cpp  Geometry.cpp  Geometry.h  LineRenderer.cpp  LineRenderer.h  Mesh.cpp  Mesh.h  Particles.cpp  Particles.h  Shader.cpp  Shader.h  Shaders.h  UIRenderer.cpp  UIRenderer.h  app.rc  main.cpp
